err/pypdffinder.err
Listing '.'...
Listing './bin'...
Compiling './bin/pilconvert.py'...
Compiling './bin/pildriver.py'...
Compiling './bin/pilfile.py'...
Compiling './bin/pilfont.py'...
Compiling './bin/pilprint.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/Pillow-2.5.3.egg-info'...
Listing './lib/python3.5/site-packages/PyPDF2'...
Listing './lib/python3.5/site-packages/PyPDF2-1.23.egg-info'...
Listing './lib/python3.5/site-packages/pdffinder'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyPdf'...
Compiling './lib/python3.5/site-packages/pyPdf/generic.py'...
***   File "./lib/python3.5/site-packages/pyPdf/generic.py", line 102
    raise utils.PdfReadError, "error reading null object"
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyPdf/pdf.py'...
***   File "./lib/python3.5/site-packages/pyPdf/pdf.py", line 655
    raise Exception, "file has not been decrypted"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyPdf/utils.py'...
***   File "./lib/python3.5/site-packages/pyPdf/utils.py", line 77
    raise TypeError, "sequence indices must be integers"
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyPdf-1.13.egg-info'...
Listing './lib/python3.5/site-packages/pyPdfFinder-0.2.egg-info'...
Listing './lib/python3.5/site-packages/reportlab'...
Listing './lib/python3.5/site-packages/reportlab/fonts'...
Listing './lib/python3.5/site-packages/reportlab/graphics'...
Listing './lib/python3.5/site-packages/reportlab/graphics/barcode'...
Listing './lib/python3.5/site-packages/reportlab/graphics/charts'...
Listing './lib/python3.5/site-packages/reportlab/graphics/samples'...
Listing './lib/python3.5/site-packages/reportlab/graphics/widgets'...
Listing './lib/python3.5/site-packages/reportlab/lib'...
Listing './lib/python3.5/site-packages/reportlab/pdfbase'...
Listing './lib/python3.5/site-packages/reportlab/pdfgen'...
Listing './lib/python3.5/site-packages/reportlab/platypus'...
Listing './lib/python3.5/site-packages/reportlab-3.1.8.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
